--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,36 +1,18 @@
 <div class="position-relative">
-  <div class="card-category card-large" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('list_background.jpg') %>)">
+  <div class="card-category card-large" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key, height: 300, crop: :fill %>')">
     <h1><%= @list.name %></h1>
   </div>
-  <span class="movie-tag"><%= pluralize(@list.movies.size, "movie") %></span>
 </div>
 
-<div class="container mb-5">
-  <div class="d-flex justify-content-between my-4">
-    <span class="mb-2 d-block"><small><em class="text-muted"><%= "You haven't saved any movies yet!" if @list.movies.empty? %></em></small></span>
-    <div>
-      <button type="button" class="btn btn-flat" data-bs-toggle="modal" data-bs-target="#new_movie_modal">
-        add a movie
-      </button>
-    </div>
-  </div>
-
-  <div class="row my-2">
-    <% @list.movies.each do |movie| %>
-      <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
-      <div class="col-12 col-sm-6 mb-4" data-aos="zoom-in">
-        <div class="bg-white rounded shadow h-100">
-          <%= image_tag movie.poster_url, alt: movie.title, class: "movie-img rounded-top" %>
-          <div class="p-3 rounded-bottom d-flex flex-column">
-            <strong><%= movie.title %> <span class="text-muted font-weight-normal">• <%= movie.rating %> <i class="fas fa-star star-yellow"></i></span></strong>
-            <small class="text-muted"><%= movie.overview %></small>
-            <div class="d-flex align-items-end justify-content-between pt-4">
-              <div>
-                <i class="fas fa-quote-left me-2"></i><small class="flex-grow-1"><%= bookmark.comment %></small>
-              </div>
-            </div>
-          </div>
-        </div>
+<div class="row my-2">
+  <% @list.movies.each do |movie| %>
+    <div class="card-product">
+      <img src="<%= movie.poster_url %>" />
+      <div class="card-product-infos">
+        <h2> <%=  movie.title %> </h2>
+        <p> 📝 Overview: <%= movie.overview %> </p>
+        <p> ⭐ Rating: <%= movie.rating %> </p>
       </div>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
+</div>
