--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,17 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <div class="page-container">
+
+      <%= render "shared/navbar" %>
+
+      <main id="main-content">
+        <%= yield %>
+      </main>
+
+      <%= render "shared/footer" %>
+
   </body>
+
 </html>
