--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: end;
-  height: 50px;
+  height: 10vh;
   padding: 0px 10px;
   color: white;
   font-size: 15px;
