feat: index and show model movie

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1> Welcome to <strong>IWatch</strong>! </h1>
     <p> Find your movies to watch, comment and rate them! </p>
-    <%= link_to "Search a movie", "#" , class: "btn btn-flat" %>
+    <%= link_to "Search a movie", movies_path , class: "btn btn-flat" %>
     <%= link_to "My lists", lists_path , class: "btn btn-gradient" %>
   </div>
 </div>
