--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -18,35 +18,37 @@
 }
 
 
-.card-product {
+.movie-card-show {
   overflow: hidden;
-  height: 120px;
-  background: white;
+  background: black;
+  color: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  height: 80vh;
+  padding: 10vh;
 }
 
-.card-product img {
+.movie-card-show img {
   height: 100%;
-  width: 120px;
+  width: 40%;
   object-fit: cover;
 }
 
-.card-product h2 {
-  font-size: 16px;
+.movie-card-show h2 {
+  font-size: 30px;
   font-weight: bold;
   margin: 0;
 }
 
-.card-product p {
-  font-size: 12px;
+.movie-card-show p {
+  font-size: 18px;
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
   margin-top: 8px;
 }
 
-.card-product .card-product-infos {
+.movie-card-show .movie-card-show-infos {
   padding: 16px;
 }
