--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,12 @@
-<%= image_tag @movie.poster_url %>
-<h2><%= @movie.title %></h2>
-<p><%= @movie.overview %></p>
-<p><%= @movie.rating %></p>
+
+<div class="movie-card-show">
+
+  <%= image_tag @movie.poster_url %>
+
+  <div class="movie-card-show-infos">
+    <h2><%= @movie.title %></h2>
+    <p>⭐<%= @movie.rating %></p>
+    <p><%= @movie.overview %></p>
+  </div>
+
+</div>
